# WanderWing

./: .env.example  .gitignore  ACTIVITY_QUICKSTART.md  ACTIVITY_RECOMMENDATIONS.md  DESIGN.md  FILES_CREATED.txt  FILES_CREATED_PHASE2.md  FRONTEND_README.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTENT_PARSER_DESIGN.md  INTENT_PARSER_SUMMARY.md  MATCHING_ENGINE_DESIGN.md  MATCHING_ENGINE_SUMMARY.md  MATCHING_TRADEOFFS.md  Makefile  QUICK_START_SCHEMAS.md  README.md  README_SCHEMAS.md  SAMPLE_MATCHES.md  alembic.ini  pyproject.toml
data/: activity_repository.py
data/activities/: barcelona.json  paris.json  tokyo.json
scripts/: evaluate_prompts.py  generate_synthetic_data.py  run_experiments.py  run_prompt_evals.py  seed_data.py  test_intent_parser.py  test_matching_demo.py  validate_schemas.py
src/wanderwing/: __init__.py
src/wanderwing/agents/: __init__.py  activity_suggester.py  itinerary_extractor.py  preference_enricher.py
src/wanderwing/agents/prompts/: extraction_v1.txt  intent_extraction_v2.txt  match_explanation_v1.txt  match_reranking_v1.txt  matching_v1.txt
src/wanderwing/api/: dependencies.py  main.py  main_updated.py
src/wanderwing/api/routes/: connections.py  experiments_enhanced.py  feedback.py  feedback_enhanced.py  intent.py  intent_updated.py  matches.py  matches_enhanced.py  matches_updated.py  profiles.py  recommendations_new.py  trips.py
src/wanderwing/core/: __init__.py  eval_runner.py  event_logger.py  experiment_registry.py  experiments.py  matching.py  prompt_registry.py  safety.py
src/wanderwing/db/: __init__.py  base.py  models.py  repositories.py
src/wanderwing/frontend/: app.py
src/wanderwing/frontend/components/: cards.py  charts.py  trip_card.py
src/wanderwing/llm/: __init__.py  client.py  utils.py
src/wanderwing/schemas/: __init__.py  activity.py  experiment.py  feedback.py  feedback_enhanced.py  match.py  match_enhanced.py  profile.py  recommendation.py  trip.py  trip_enhanced.py  user.py
src/wanderwing/services/: __init__.py  activity_llm_enhancer.py  activity_recommender.py  intent_parser.py  llm_reranker.py  match_service.py  matching_engine.py  traveler_matcher.py  trip_service.py  user_service.py
src/wanderwing/utils/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/fixtures/: intent_examples.json  mock_llm_responses.json  sample_trips.json
tests/integration/: test_activity_workflow.py  test_api.py  test_matching_workflow.py  test_trip_workflow.py
tests/unit/: test_activity_recommender.py  test_agents.py  test_eval_framework.py  test_experiment_framework.py  test_intent_parser.py  test_llm_client.py  test_matching.py  test_matching_engine.py  test_schemas.py  test_traveler_matcher.py
(+23 files in other folders)
